Stop the app from squishing

--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -92,6 +92,7 @@
   /* flex-direction: column;
   align-items: center; */
   margin: 0 0 0 250px;
+  min-width: 800px;
 }
 
 
